--- a/_config.yml
+++ b/_config.yml
@@ -18,14 +18,14 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: UPFOS XYZ
+title: UPFOS小圓桌
 email: njliangfei@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  All about upfos.com
+  Talk about upfos
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: liangfeidotme
-github_username:  upfos
+github_username: upfos
 
 # Build settings
 theme: minima
